--- a/desktop_shortcuts/mapr_dsr.desktop
+++ b/desktop_shortcuts/mapr_dsr.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Name=MapR DataScience Refinery
 Comment=Open MapR DataScience Refinery
 Icon=applications-internet
-Comment=Open URL: http://MAPR_HOST:9995
+Comment=Open URL: https://MAPR_HOST:9995
 Icon[en_US]=applications-internet
-URL=http://MAPR_HOST:9995
+URL=https://MAPR_HOST:9995
 Type=Link
