--- a/desktop_shortcuts/mapr_bootcamp_labs.desktop
+++ b/desktop_shortcuts/mapr_bootcamp_labs.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Name=Lab Guide
 Comment=Open Bootcamp Lab Guide
 Icon=applications-internet
-Comment=Open URL: https://goo.gl/F8cde6
+Comment=Open URL: https://goo.gl/d8kQ1T
 Icon[en_US]=applications-internet
-URL=https://goo.gl/F8cde6
+URL=https://goo.gl/d8kQ1T
 Type=Link
